/**
 * The guitar theory notes: structure, token resolution in every key and
 * every step of the guitar flow, the conditions that pick them, and the
 * plain-language style limits (≤ 4 sentences of ≤ 20 words; ≤ 5-word titles).
 */

import { describe, expect, it } from 'vitest';
import {
  analyzeChange,
  analyzeMusicMap,
  classifyVoicing,
  type GuitarSubsectionPrefix,
} from '@/lib/guitar/theory';
import {
  buildGuitarModeFlow,
  buildGuitarScaleFlow,
} from '../../activityFlows/guitarAppliedTheoryFundamentals';
import { GUITAR_KEY_ORDER } from '../bookOne';
import { centerId, getGuitarCenter, getGuitarShape } from '../centers';
import { GUITAR_MODES, isGuitarModalMode } from '../modes';
import { GUITAR_THEORY_CATALOG } from '../theoryCatalog';
import {
  THEORY_CONDITIONS,
  THEORY_TOKENS,
  deriveTheoryContext,
  theoryStepsFor,
  type TheoryNoteContext,
} from '../theoryConditions';
import {
  GUITAR_SUBSECTION_PREFIXES,
  GUITAR_THEORY_NOTES,
  GUITAR_THEORY_STRINGS,
  familyTag,
  noteAppliesTo,
  noteHasPrefix,
  notesFor,
  resolveTheoryNote,
  stepPrefix,
  theoryString,
  type ResolvedTheoryNote,
} from '../theoryNotes';
import type { GuitarCenterId, GuitarKeyName } from '../types';

const TOKEN = /\{(\w+)\}/g;

function sentences(text: string): string[] {
  return text.split(/(?<=[.!?])\s+/).filter(Boolean);
}

function expectStyle(text: string, where: string) {
  const list = sentences(text);
  expect(list.length, where).toBeLessThanOrEqual(4);
  for (const s of list) {
    expect(s.split(/\s+/).length, `${where}: "${s}"`).toBeLessThanOrEqual(20);
  }
}

interface Surface {
  prefix: GuitarSubsectionPrefix;
  ctx: TheoryNoteContext;
}

/**
 * Every place a note can show in one key: the key header, the Section B
 * card, the practice tools, and each step of the flow with each of its
 * shapes and each of its chord changes.
 */
function surfaces(id: GuitarCenterId): Surface[] {
  const center = getGuitarCenter(id);
  const steps = theoryStepsFor(buildGuitarScaleFlow(center.key, center.mode));
  const out: Surface[] = [
    { prefix: 'KEY', ctx: { center } },
    { prefix: 'B', ctx: { center } },
    { prefix: 'PRACTICE', ctx: { center } },
  ];
  for (const step of steps) {
    const prefix = stepPrefix(step.id);
    if (!prefix) throw new Error(`No prefix for step ${step.id}`);
    const base = {
      center,
      step,
      steps,
      settings: { showRomanNumerals: true },
    };
    out.push({ prefix, ctx: base });
    const shapes = step.shapeIds.map((id) => getGuitarShape(id)!);
    for (const shape of shapes) out.push({ prefix, ctx: { ...base, shape } });
    const changes = step.mapExample
      ? analyzeMusicMap(center.musicMaps[step.mapExample - 1], center.mode)
          .changes
      : shapes
          .slice(1)
          .map((shape, i) => analyzeChange(shapes[i], shape, i, i + 1));
    for (const change of changes)
      out.push({ prefix, ctx: { ...base, change } });
  }
  return out;
}

const SURFACES = Object.fromEntries(
  GUITAR_KEY_ORDER.map((key) => [key, surfaces(key)]),
) as Record<GuitarKeyName, Surface[]>;

/**
 * The rest of Theory: each family's first mode and the pentatonic and blues
 * scales in every key, the other modes in C, F# and Db.
 */
const FAMILY_SURFACES = new Map<GuitarCenterId, Surface[]>(
  GUITAR_THEORY_CATALOG.filter((e) => e.family !== 'diatonic').flatMap(
    (entry) => {
      const keys: readonly GuitarKeyName[] =
        entry.degree === 1 || entry.degree === null
          ? GUITAR_KEY_ORDER
          : ['C', 'F#', 'Db'];
      return keys.map((key) => {
        const id = centerId(key, entry.key);
        return [id, surfaces(id)] as const;
      });
    },
  ),
);

/** The other modes' lessons, every key. */
const MODAL_SURFACES = new Map<GuitarCenterId, Surface[]>(
  GUITAR_MODES.filter(isGuitarModalMode).flatMap((mode) =>
    GUITAR_KEY_ORDER.map((key) => {
      const id = centerId(key, mode);
      return [id, surfaces(id)] as const;
    }),
  ),
);

describe('guitar theory notes: structure', () => {
  it('has 106 notes with unique ids and 70 UI strings', () => {
    expect(GUITAR_THEORY_NOTES).toHaveLength(106);
    const ids = GUITAR_THEORY_NOTES.map((n) => n.id);
    expect(new Set(ids).size).toBe(ids.length);
    expect(Object.keys(GUITAR_THEORY_STRINGS)).toHaveLength(70);
  });

  it('uses valid prefixes, conditions and tokens', () => {
    for (const note of GUITAR_THEORY_NOTES) {
      const prefixes = [note.subsectionPrefix].flat();
      for (const p of prefixes) {
        expect(GUITAR_SUBSECTION_PREFIXES, note.id).toContain(p);
      }
      expect(typeof THEORY_CONDITIONS[note.when], note.id).toBe('function');
      for (const [, token] of `${note.title} ${note.body}`.matchAll(TOKEN)) {
        expect(Object.keys(THEORY_TOKENS), note.id).toContain(token);
      }
    }
  });

  it('keeps bodies plain', () => {
    for (const note of GUITAR_THEORY_NOTES) {
      expect(sentences(note.body).length, note.id).toBeGreaterThanOrEqual(1);
      expectStyle(note.body, note.id);
    }
  });

  it('keeps titles short', () => {
    const long = GUITAR_THEORY_NOTES.filter(
      (n) => n.title.split(/\s+/).length > 5,
    ).map((n) => n.id);
    // The approved copy's one 6-word title, kept verbatim.
    expect(long).toEqual(['d3.triadBar']);
  });

  it('reads step prefixes', () => {
    expect(stepPrefix('B5.2')).toBe('B5');
    expect(stepPrefix('D3.4')).toBe('D3');
    expect(stepPrefix('C1.1')).toBeNull();
    // The Section B card shows only the B notes, not B3's or B8's.
    const card = notesFor('B', { center: getGuitarCenter('C') });
    expect([...card.intro, ...card.info].map((n) => n.id)).toEqual([
      'b.fromScale',
      'b.pattern',
      'b.sevenLater',
    ]);
  });
});

/**
 * Resolves every applicable note on each surface. Problems come back as
 * text (one expect per note would be slow across 84 key centers); the notes
 * that showed are added to `shown`.
 */
function resolveAll(
  entries: readonly (readonly [string, Surface[]])[],
  shown: Set<string>,
): string[] {
  const problems: string[] = [];
  for (const [key, keySurfaces] of entries) {
    for (const { prefix, ctx } of keySurfaces) {
      const d = deriveTheoryContext(ctx);
      for (const note of GUITAR_THEORY_NOTES) {
        if (!noteHasPrefix(note, prefix)) continue;
        if (!THEORY_CONDITIONS[note.when](d)) continue;
        const where = `${key} ${ctx.step?.id ?? prefix} ${note.id}`;
        const resolved = resolveTheoryNote(note, ctx);
        // Each lesson's notes stay out of the others' (Ionian, the modes,
        // each family of the rest of Theory).
        if (!noteAppliesTo(note, ctx.center)) {
          if (resolved) problems.push(`${where}: shown in the wrong mode`);
          continue;
        }
        // Step-panel notes always fill in. A popover about a chord box
        // only has to fill in on a surface that shows one; elsewhere
        // (a change badge, a multi-chord step) it resolves fully or not
        // at all.
        if (!resolved) {
          if (note.placement !== 'popover' || d.shape) {
            problems.push(`${where}: did not resolve`);
          }
          continue;
        }
        if (`${resolved.title}${resolved.body}`.includes('{')) {
          problems.push(`${where}: unfilled token`);
        }
        const list = sentences(resolved.body);
        if (
          list.length > 4 ||
          list.some((sentence) => sentence.split(/\s+/).length > 20)
        ) {
          problems.push(`${where}: too long: ${resolved.body}`);
        }
        shown.add(note.id);
      }
    }
  }
  return problems;
}

describe('guitar theory notes: resolution', () => {
  const shown = new Set<string>();

  it('resolves every token in all 12 keys and every applicable step', () => {
    expect(resolveAll(Object.entries(SURFACES), shown)).toEqual([]);
  });

  it.each(GUITAR_MODES.filter(isGuitarModalMode))(
    'resolves every token in every %s key and step',
    (mode) => {
      const entries = [...MODAL_SURFACES].filter(([id]) =>
        id.endsWith(`:${mode}`),
      );
      expect(entries).toHaveLength(12);
      expect(resolveAll(entries, shown)).toEqual([]);
    },
  );

  it.each([
    'pentatonic-blues',
    'harmonic-minor',
    'melodic-minor',
    'harmonic-major',
    'double-harmonic',
  ])('resolves every token in the %s lessons', (family) => {
    const keys = new Set(
      GUITAR_THEORY_CATALOG.filter((e) => e.family === family).map(
        (e) => e.key,
      ),
    );
    const entries = [...FAMILY_SURFACES].filter(([id]) =>
      keys.has(id.split(':')[1] as never),
    );
    expect(entries.length).toBeGreaterThan(12);
    expect(resolveAll(entries, shown)).toEqual([]);
  });

  it('shows every note somewhere', () => {
    expect([...shown].sort()).toEqual(
      GUITAR_THEORY_NOTES.map((n) => n.id).sort(),
    );
  });

  it('introduces each key with the note that changed', () => {
    const intro = (key: GuitarKeyName) =>
      notesFor('KEY', { center: getGuitarCenter(key) }).intro.map(
        (n) => n.body,
      );
    expect(intro('C')).toEqual([
      'C major has no sharps or flats. Each key after it changes just one note.',
    ]);
    expect(intro('F#')).toEqual([
      'F# major is B major with one note changed. E becomes E#. Find E# in your scale shape.',
    ]);
    expect(intro('Db')).toEqual([
      'Db major sounds like F# major with one note changed. B becomes C. The other notes keep their sound but take flat names.',
    ]);
    const unicode = notesFor('KEY', {
      center: getGuitarCenter('Db'),
      settings: { accidentals: 'unicode' },
    });
    expect(unicode.intro[0].body).toMatch(/^D♭ major sounds like F♯ major/);
    expect(unicode.info.map((n) => n.id)).toEqual([
      'key.flatSwitch',
      'key.circle',
      'key.relMinor',
    ]);
  });

  it('fills shape, change and map tokens', () => {
    const C = getGuitarCenter('C');
    const cmaj7 = C.sevenths[0];
    const b7 = notesFor('B7', { center: C, shape: cmaj7 });
    const body = (id: string, list: ResolvedTheoryNote[]) =>
      list.find((n) => n.id === id)?.body;
    expect(body('b7.hidden', b7.popover)).toBe(
      'Take away the root of C major 7 and E minor is left. You already know it as chord 3.',
    );
    expect(body('b7.order', b7.popover)).toContain('plays R, 5, 7, 3.');
    expect(body('b7.drop2', b7.popover)).toContain('Root on string 5,');

    const fmaj7 = notesFor('B7', {
      center: getGuitarCenter('F'),
      shape: getGuitarCenter('F').sevenths[0],
    });
    expect(body('b7.open', fmaj7.popover)).toBe(
      'The open strings are part of this chord. Open A is the 3. Open high E is the 7. Let them ring.',
    );
    const emaj7 = notesFor('B7', {
      center: getGuitarCenter('E'),
      shape: getGuitarCenter('E').sevenths[0],
    });
    expect(body('b7.open', emaj7.popover)).toContain(
      'Open low E and high E are the root. Open B is the 5.',
    );

    const cOpen = notesFor('B1', { center: C, shape: C.triads[0] });
    expect(body('b1.names', cOpen.info)).toBe(
      'This shape uses 5 strings but only three note names: C, E and G. Some notes appear twice, in different octaves.',
    );

    const fSharp = getGuitarCenter('F#');
    const map = fSharp.musicMaps[3];
    const d3 = notesFor('D3', { center: fSharp, map });
    expect(body('d3.pull', d3.info)).toBe(
      'In C#7, B wants to step down to A#. E# wants to step up to F#. Those small steps make 1 sound like home.',
    );
    const sameFret = analyzeMusicMap(map, 'ionian').changes.find(
      (c) => c.sameFretRootMove === 'r6-to-r5',
    );
    const popover = notesFor('D3', {
      center: fSharp,
      map,
      change: sameFret,
    }).popover;
    expect(body('d3.sameFret', popover)).toContain('from 2 to 5.');
  });

  it('shows the barre and drop-3 intros once per key', () => {
    const drop3Keys: GuitarKeyName[] = [];
    for (const key of GUITAR_KEY_ORDER) {
      const stepsWith = (id: string) =>
        new Set(
          SURFACES[key]
            .filter(({ prefix, ctx }) =>
              notesFor(prefix, ctx).intro.some((n) => n.id === id),
            )
            .map(({ ctx }) => ctx.step?.id),
        );
      expect(stepsWith('b.barreCare').size, key).toBe(1);
      const drop3 = stepsWith('b7.drop3mute');
      expect(drop3.size, key).toBeLessThanOrEqual(1);
      if (drop3.size) drop3Keys.push(key);
    }
    // Only keys with a drop 3 grip: on the 7th-chord page, or in a 7th-chord
    // Music Map (Examples 4 and 5) when the page has none.
    const isDrop3 = (frets: string) =>
      frets.startsWith(frets.split('-')[0] + '-X-');
    expect(drop3Keys).toEqual(
      GUITAR_KEY_ORDER.filter((key) => {
        const center = getGuitarCenter(key);
        return (
          center.sevenths.some((s) => isDrop3(s.frets)) ||
          center.musicMaps
            .filter((m) => m.example >= 4)
            .some((m) => m.bars.some((b) => isDrop3(b.frets)))
        );
      }),
    );
    const c = SURFACES.C.find(({ ctx }) =>
      notesFor('B1', ctx).intro.some((n) => n.id === 'b.barreCare'),
    );
    expect(c?.ctx.step?.id).toBe('B1.7'); // arpeggiating F, the first barre
  });

  it('snapshots the resolved notes for C, F# and Db', () => {
    for (const key of ['C', 'F#', 'Db'] as const) {
      const byId: Record<string, string[]> = {};
      for (const { prefix, ctx } of SURFACES[key]) {
        const all = notesFor(prefix, ctx);
        for (const n of [...all.intro, ...all.info, ...all.popover]) {
          const text = `${n.title}: ${n.body}`;
          byId[n.id] = [...new Set([...(byId[n.id] ?? []), text])].sort();
        }
      }
      const sorted = Object.fromEntries(
        Object.entries(byId).sort(([a], [b]) => a.localeCompare(b)),
      );
      expect(sorted).toMatchSnapshot(key);
    }
  });
});

describe('guitar theory notes: conditions', () => {
  it('each condition holds somewhere and fails somewhere', () => {
    const outcomes = new Map<string, Set<boolean>>();
    // Book One's every step, each mode's key header, and the rest of
    // Theory's every step.
    const contexts = [
      ...GUITAR_KEY_ORDER.flatMap((key) => SURFACES[key].map((s) => s.ctx)),
      ...[...MODAL_SURFACES.keys()].map((id) => ({
        center: getGuitarCenter(id),
      })),
      ...[...FAMILY_SURFACES.values()].flatMap((list) =>
        list.map((s) => s.ctx),
      ),
    ];
    for (const ctx of contexts) {
      const d = deriveTheoryContext(ctx);
      for (const [id, test] of Object.entries(THEORY_CONDITIONS)) {
        outcomes.set(id, (outcomes.get(id) ?? new Set()).add(test(d)));
      }
    }
    const constant = [...outcomes]
      .filter(([, seen]) => seen.size < 2)
      .map(([id]) => id);
    // (Every 7th-chord page has a climbing top line; pentatonic and blues
    // lessons have no 7th-chord page.)
    expect(constant.sort()).toEqual(['always']);
  });

  it('reads timing, articulation and the Roman-numeral setting from the step', () => {
    const at = (id: string) => {
      const found = SURFACES.C.find(
        ({ ctx }) => ctx.step?.id === id && !ctx.shape && !ctx.change,
      );
      if (!found) throw new Error(`No step ${id}`);
      return found;
    };
    const ids = (id: string, pick: 'intro' | 'info') => {
      const { prefix, ctx } = at(id);
      return notesFor(prefix, ctx)[pick].map((n) => n.id);
    };
    expect(ids('A1.1', 'intro')).not.toContain('a1.slowFirst');
    expect(ids('A1.2', 'intro')).toContain('a1.slowFirst');
    expect(ids('A3.1', 'intro')).toContain('a3.staccato');
    expect(ids('A3.1', 'intro')).not.toContain('a3.legato');
    expect(ids('A3.2', 'intro')).toContain('a3.legato');
    expect(ids('A3.2', 'intro')).not.toContain('a3.staccato');
    expect(ids('D3.4', 'info')).toContain('d3.roman');
    const { ctx } = at('D3.4');
    const plain = notesFor('D3', { ...ctx, settings: {} }).info;
    expect(plain.map((n) => n.id)).not.toContain('d3.roman');
  });

  it('reads the chord box', () => {
    const popovers = (key: GuitarKeyName, box: number) => {
      const center = getGuitarCenter(key);
      const shape = center.sevenths[box - 1];
      return notesFor('B7', { center, shape }).popover.map((n) => n.id);
    };
    expect(popovers('C', 7)).toContain('b7.halfDim');
    expect(popovers('C', 1)).not.toContain('b7.halfDim');
    expect(popovers('C', 5)).not.toContain('b7.hidden');
    expect(popovers('C', 1)).toContain('b7.movable');
    expect(popovers('F', 1)).not.toContain('b7.movable');
  });
});

describe('guitar theory UI strings', () => {
  it('fills tokens and family tags', () => {
    expect(theoryString('badge.shared', { n: 2 })).toBe('2 shared notes');
    expect(theoryString('position.label', { startFret: 7 })).toBe(
      'Position 7: finger 1 on fret 7',
    );
    expect(theoryString('pt.loopHalf', { from: 1 })).toBe('Loop bars 1–{to}');
    const voicing = classifyVoicing({ frets: 'X-3-5-4-5-X' }, 0, 'maj7');
    expect(familyTag(voicing)).toBe('Root on string 5 · drop 2');
    expect(
      familyTag(classifyVoicing({ frets: 'X-3-5-3-4-X' }, 0, 'min')),
    ).toBeNull();
  });
});

describe('guitar theory notes: the modes', () => {
  const intro = (id: GuitarCenterId) =>
    notesFor('KEY', {
      center: getGuitarCenter(id),
      settings: { accidentals: 'unicode' },
    }).intro.map((n) => n.body);

  it('introduces a mode by its parent key and its colour note', () => {
    expect(intro('D:dorian')).toEqual([
      'D Dorian uses the same notes as C major. It starts on note 2 instead of note 1, so D is home.',
      'Dorian is a minor mode with a bright, raised 6. In D Dorian that note is B, the 6.',
    ]);
    expect(intro('Db:locrian')[0]).toBe(
      'D♭ Locrian sounds like D major played from its note 7, so D♭ is home. Here its notes are spelled differently.',
    );
    expect(intro('Db:locrian')[1]).toMatch(/that note is A𝄫, the ♭5\.$/);
  });

  it('keeps Book One’s major-key notes out of the modes', () => {
    const steps = theoryStepsFor(buildGuitarModeFlow('A', 'aeolian'));
    const center = getGuitarCenter('A:aeolian');
    const ids = new Set(
      steps.flatMap((step) => {
        const prefix = stepPrefix(step.id);
        if (!prefix) return [];
        const all = notesFor(prefix, { center, step, steps });
        return [...all.intro, ...all.info, ...all.popover].map((n) => n.id);
      }),
    );
    for (const note of GUITAR_THEORY_NOTES) {
      if (note.modes === 'ionian')
        expect(ids.has(note.id), note.id).toBe(false);
    }
    expect(ids.has('a1.modeSteps')).toBe(true);
    expect(ids.has('a4.modeWhat')).toBe(true);
    expect(ids.has('d3.modeColour')).toBe(true);
  });

  it('reads a mode’s pentatonics and half steps', () => {
    const steps = theoryStepsFor(buildGuitarModeFlow('D', 'dorian'));
    const center = getGuitarCenter('D:dorian');
    const body = (stepId: string, noteId: string) => {
      const step = steps.find((s) => s.id === stepId)!;
      const all = notesFor(stepPrefix(stepId)!, { center, step, steps });
      return [...all.intro, ...all.info].find((n) => n.id === noteId)?.body;
    };
    expect(body('A1.1', 'a1.modeSteps')).toMatch(
      /from 2 to ♭3, and from 6 to ♭7\.$/,
    );
    expect(body('A4.1', 'a4.modeWhat')).toMatch(/takes 1, ♭3, 4, 5 and 6/);
    expect(body('A5.1', 'a4.modeWhat')).toMatch(/takes 1, 2, ♭3, 5 and 6/);
    expect(body('A5.1', 'a4.modeGhost')).toMatch(/where 4 and ♭7 would be/);
  });
});
